--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,10 @@ nav {
   text-align: center;
   margin-bottom: 35px; }
 
+.left {
+  text-align: left;
+  font: 1.7rem "800"; }
+
 .text_sm {
   text-align: center;
   margin-top: -30px;
@@ -1189,6 +1193,262 @@ nav {
     padding: 13px 10px;
     border-radius: 3px;
     font: 1.125rem "800"; }
+
+.find_item {
+  margin-bottom: 50px;
+  background: url(../img/item/item_bg.png) no-repeat center center/cover; }
+  .find_item .container {
+    padding: 50px 15px; }
+  .find_item .find_title {
+    text-align: center;
+    font: 1.5rem "800";
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+  .find_item .find_text {
+    color: #fff;
+    margin-bottom: 60px;
+    text-align: center;
+    font: .87rem/15px "600"; }
+  .find_item .find_btn {
+    max-width: 270px;
+    margin: 0 auto;
+    display: block;
+    border-radius: 3px;
+    background: #fff;
+    font: 1.4rem "600";
+    padding: 15px 10px;
+    text-align: center;
+    width: 100%;
+    color: #C1A790; }
+
+.question {
+  margin-bottom: 90px; }
+  .question .question_wrap {
+    margin-bottom: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px; }
+    @media (max-width: 320px) {
+      .question .question_wrap {
+        grid-template-columns: 1fr; } }
+    .question .question_wrap a {
+      font: 1rem "600";
+      text-align: center;
+      border: 1px solid #C1A790;
+      border-radius: 3px;
+      padding: 15px;
+      color: #fff;
+      background: #C1A790; }
+    .question .question_wrap a:last-child {
+      color: #000;
+      background: transparent; }
+
+.tabs__content.active {
+  display: block; }
+
+.tabs__content {
+  display: none; }
+
+.tabs__caption {
+  display: grid;
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #C5C5C5;
+  grid-template-columns: 1fr 1fr; }
+  .tabs__caption li {
+    text-align: center;
+    color: #919191;
+    font: 1.125rem "600";
+    text-align: center; }
+    .tabs__caption li span {
+      color: #919191;
+      font: .95rem "400"; }
+  .tabs__caption .active {
+    color: #000;
+    position: relative; }
+    .tabs__caption .active::after {
+      content: '';
+      height: 5px;
+      width: 100%;
+      position: absolute;
+      bottom: -11px;
+      left: 0;
+      background: #C1A790; }
+
+.question_wraps {
+  display: grid;
+  grid-template-columns: 1fr; }
+  .question_wraps .feedback_item {
+    padding-left: 25px; }
+  .question_wraps .question_item {
+    padding-bottom: 25px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #D9D9D9; }
+    .question_wraps .question_item .question_item_title {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      margin-bottom: 20px; }
+      .question_wraps .question_item .question_item_title .name {
+        font: 1.125rem "600"; }
+      .question_wraps .question_item .question_item_title .admin {
+        color: #C1A790; }
+      .question_wraps .question_item .question_item_title .data {
+        color: #7C7C7C;
+        font: .87rem "400"; }
+    .question_wraps .question_item .messages {
+      margin-bottom: 15px;
+      font: .8rem/120% "400"; }
+    .question_wraps .question_item .feedback {
+      color: #C1A790;
+      -webkit-text-decoration-line: underline;
+              text-decoration-line: underline;
+      font: .8rem "400"; }
+
+.reviews_wrap .reviews_item {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #D9D9D9; }
+  .reviews_wrap .reviews_item .like_wrpa {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+    .reviews_wrap .reviews_item .like_wrpa a {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      margin-right: 10px;
+      color: #C1A790;
+      opacity: .5;
+      font: .87rem "400"; }
+      .reviews_wrap .reviews_item .like_wrpa a svg {
+        height: 15px;
+        width: 15px;
+        margin-right: 5px; }
+    .reviews_wrap .reviews_item .like_wrpa .active {
+      opacity: 1; }
+  .reviews_wrap .reviews_item .reviews_img_wrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 5px;
+    margin-bottom: 20px; }
+    .reviews_wrap .reviews_item .reviews_img_wrap img {
+      max-width: 100%;
+      height: auto;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  .reviews_wrap .reviews_item .reivews_box {
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    grid-gap: 10px;
+    margin-bottom: 25px; }
+    .reviews_wrap .reviews_item .reivews_box .reviews_text .subtitle {
+      margin-bottom: 10px;
+      font: .87rem "800"; }
+    .reviews_wrap .reviews_item .reivews_box .reviews_text .messages {
+      margin-bottom: 15px;
+      font: .8rem/120% "400"; }
+    .reviews_wrap .reviews_item .reivews_box .reviews_text a {
+      color: #C1A790;
+      -webkit-text-decoration-line: underline;
+              text-decoration-line: underline;
+      font: .8rem "400"; }
+    .reviews_wrap .reviews_item .reivews_box .reviews_img img {
+      max-width: 100%;
+      -o-object-fit: cover;
+         object-fit: cover;
+      width: 100%;
+      margin-bottom: 5px; }
+    .reviews_wrap .reviews_item .reivews_box .reviews_img p {
+      text-align: center;
+      font: .87rem "400"; }
+  .reviews_wrap .reviews_item .reviews_item_title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 8px; }
+    .reviews_wrap .reviews_item .reviews_item_title .name {
+      font: 1.125rem "600"; }
+    .reviews_wrap .reviews_item .reviews_item_title .admin {
+      color: #C1A790; }
+    .reviews_wrap .reviews_item .reviews_item_title .data {
+      color: #7C7C7C;
+      font: .87rem "400"; }
+  .reviews_wrap .reviews_item .reviews_star {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 15px; }
+    .reviews_wrap .reviews_item .reviews_star img {
+      margin-right: 3px;
+      height: 18px;
+      width: 18px; }
+
+.reviews_wrap .reviews_item:last-child {
+  border: none;
+  margin: 0;
+  padding: 0; }
+
+.pagination {
+  margin-top: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .pagination li a {
+    display: block;
+    padding: 10px 15px;
+    font: 1rem "600";
+    color: #000; }
+  .pagination .active_link {
+    font: 1rem "900";
+    color: #C1A790; }
 
 .home_catalog_top {
   margin-top: 20px;
