--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -360,6 +360,11 @@
     margin-bottom: 35px;
 }
 
+.left {
+    text-align: left;
+    font: 1.7rem "800";
+}
+
 .text_sm {
     text-align: center;
     margin-top: -30px;
